syntax = "proto3";

package transferproto;

service UserService {
    rpc findAll (findAllRequest) returns (findAllResponse) {}
    rpc create (createRequest) returns (createResponse) {}
    rpc findOne (findOneRequest) returns (findOneResponse) {}
    rpc update (updateRequest) returns (updateResponse) {}
    rpc remove (removeRequest) returns (removeResponse) {}
}

message findAllRequest {
    string token = 1;
}

message findAllResponse {
    repeated User users = 1;
    string description = 2;
}

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
    int32 age = 4;
}

message createRequest {
    int32 id = 1;
    string name = 2;
    string email = 3;
    int32 age = 4;
    string password = 5;
    string token = 6;
}
message createResponse {
    User users = 1;
    string description = 2;
}

message findOneRequest {
    int32 id = 1;
    string token = 2;
}
message findOneResponse {
    User users = 1;
    string description = 2;
}

message updateRequest {
    int32 id = 1;
    string name = 2;
    int32 age = 3;
    string token = 4;
}
message updateResponse {
    User users = 1;
    string description = 2;
}


message removeRequest {
    int32 id = 1;
    string token = 2;
}
message removeResponse {
    User users = 1;
    string description = 2;
}


service AuthService {
    rpc signIn (signInRequest) returns (signInResponse) {}
    rpc signUp (signUpRequest) returns (signUpResponse) {}
}
message signUpRequest {
    int32 id = 1;
    string name = 2;
    string email = 3;
    int32 age = 4;
    string password = 5;
}
message signUpResponse {
    string token = 1;
    string description = 2;
}


message signInRequest {
    int32 id = 1;
    string name = 2;
    string email = 3;
    int32 age = 4;
    string password = 5;
}
message signInResponse {
    string token = 1;
    string description = 2;
}